compatibility-tests/compile-fail/tests/ui/duplication-backtrace-delegate.stderr
error: Cannot have `backtrace` field and `backtrace` attribute on a source field in the same variant
  --> $DIR/duplication-backtrace-delegate.rs:10:9
   |
10 | /         #[snafu(backtrace)]
11 | |         source: String,
   | |______________________^

error: Cannot have `backtrace` field and `backtrace` attribute on a source field in the same variant
 --> $DIR/duplication-backtrace-delegate.rs:7:9
  |
7 |         backtrace: Backtrace,
  |         ^^^^^^^^^^^^^^^^^^^^
